--- a/index-3.html
+++ b/index-3.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:34 GMT -->
 <head>
-    <title>Products</title>
+    <title>Productos</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-    <script src="js/jquery-migrate-1.2.1.js"></script><!--[if lt IE 9]>
-    <html class="lt-ie9">
-      <div style="clear: both; text-align:center; position: relative;"><a href="http://windows.microsoft.com/en-US/internet-explorer/.."><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-    </html>
-    <script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/device.min.js"></script>
   </head>
   <body>
     <div class="page">
-      <!--
-      ========================================================
-      							HEADER
-      ========================================================
-
-
-      -->
       <header>
         <div id="stuck_container" class="stuck_container">
           <div class="container">
-            <h1 class="brand fl-glypho-camera119"><a href="index.html">Quarry</a></h1>
+            <a href="index.html"><img src="images/logo.png" alt=""/></a>
             <nav class="nav">
               <ul data-type="navbar" class="sf-menu">
                 <li><a href="index.html">Inicio</a>
                 </li>
-                <li><a href="index-1.html">About</a>
-                  <ul>
+                <li><a href="index-1.html">Acerca de</a>
+                  <!-- <ul>
                     <li><a href="#">Lorem ipsum dolor</a></li>
                     <li><a href="#">Conse ctetur adipisicing</a></li>
                     <li><a href="#">Elit sed do eiusmod</a>
@@ -48,28 +35,23 @@
                     <li><a href="#">Incididunt ut labore</a></li>
                     <li><a href="#">Et dolore magna</a></li>
                     <li><a href="#">Ut enim ad minim</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li><a href="index-2.html">Services</a>
+                <li><a href="index-2.html">Servicios</a>
                 </li>
-                <li class="active"><a href="index-3.html">Products</a>
+                <li class="active"><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Location</a>
+                <li><a href="index-4.html">Ubicación</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <!--
-      ========================================================
-      							CONTENT
-      ========================================================
-      -->
       <main>
         <section class="well bg-color">
           <div class="container">
-            <h2 class="center">What we offer</h2>
+            <h2 class="center">¿Qué ofrecemos a nuestros clientes?</h2>
             <div class="row">
               <div class="grid_6"><img src="images/page-4_img01.jpg" alt=""></div>
               <div class="grid_6 mg-add">
@@ -81,7 +63,7 @@
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Our quarry products</h2>
+            <h2>Our quarry Productos</h2>
             <div class="row off1">
               <div class="grid_4"><a href="#" class="img"><img src="images/page-4_img02.jpg" alt=""><span>Cum sociis natoque penatibus</span></a></div>
               <div class="grid_4"><a href="#" class="img"><img src="images/page-4_img03.jpg" alt=""><span>Praesent vestim molstie lacus </span></a></div>
@@ -113,13 +95,13 @@
         </section>
         <section data-mobile="true" class="well4 center parallax" style='background-image: url("images/parallax4.jpg");'>
           <div class="container">
-            <h2>Delivering quality stone products</h2>
+            <h2>Delivering quality stone Productos</h2>
             <p class="txt1">Lorem ipsum dolor sit amet conse ctetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna<br/> aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo.</p><a href="#" class="btn">Read more</a>
           </div>
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Featured products</h2>
+            <h2>Featured Productos</h2>
             <ul class="row index-list">
               <li class="grid_3">
                 <h5><a href="#">Penatibus et magnis</a></h5>
@@ -151,7 +133,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Products</h5>
+                <h5>Productos</h5>
                 <ul>
                   <li><a href="#">Vestibulum</a></li>
                   <li><a href="#">Culis lacinia</a></li>
@@ -187,13 +169,13 @@
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Acerca de</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Ubicación</a></li>
                   </ul>
                 </nav>
-                <h5>Follow us</h5>
+                <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
@@ -201,33 +183,26 @@
                 </ul>
               </div>
               <div class="grid_3">
-                <h5>Contact</h5>
+                <h5>Contacto</h5>
                 <dl>
-                  <dt>Telephone:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 959 603 6035</a></dd>
-                </dl>
-                <dl>
-                  <dt>FAX:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 504 889 9898</a></dd>
+                  <dt>Teléfono:</dt>
+                  <dd><a href="callto:#">&nbsp;(55) 5893-2231</a></dd>
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
-                <h5>Location</h5>
-                <address>8901 Marmora Road Glasgow, DO4 89GR</address>
+                <h5>Ubicación</h5>
+                <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
         <section class="copyright">
-          <div class="container">© <span id="copyright-year"></span>&nbsp;QUARRY.&nbsp;<a href="index-5.html">Privacy policy</a>
+          <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
       </footer>
     </div>
     <script src="js/script.js"></script>
-  </body><!-- Google Tag Manager --><noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-P9FT69"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P9FT69');</script><!-- End Google Tag Manager -->
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-3.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:42 GMT -->
-</html>
+  </body></html>
