--- a/index-4.html
+++ b/index-4.html
@@ -31,13 +31,13 @@
       <header>
         <div id="stuck_container" class="stuck_container">
           <div class="container">
-            <h1 class="brand fl-glypho-camera119"><a href="index.html">Quarry</a></h1>
+            <a href="index.html"><img src="images/logo.png" alt=""/></a>
             <nav class="nav">
               <ul data-type="navbar" class="sf-menu">
                 <li><a href="index.html">Inicio</a>
                 </li>
-                <li><a href="index-1.html">About</a>
-                  <ul>
+                <li><a href="index-1.html">Acerca de</a>
+                  <!-- <ul>
                     <li><a href="#">Lorem ipsum dolor</a></li>
                     <li><a href="#">Conse ctetur adipisicing</a></li>
                     <li><a href="#">Elit sed do eiusmod</a>
@@ -50,13 +50,13 @@
                     <li><a href="#">Incididunt ut labore</a></li>
                     <li><a href="#">Et dolore magna</a></li>
                     <li><a href="#">Ut enim ad minim</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li><a href="index-2.html">Services</a>
+                <li><a href="index-2.html">Servicios</a>
                 </li>
-                <li><a href="index-3.html">Products</a>
+                <li><a href="index-3.html">Productos</a>
                 </li>
-                <li class="active"><a href="index-4.html">Location</a>
+                <li class="active"><a href="index-4.html">Ubicación</a>
                 </li>
               </ul>
             </nav>
@@ -117,7 +117,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Products</h5>
+                <h5>Productos</h5>
                 <ul>
                   <li><a href="#">Vestibulum</a></li>
                   <li><a href="#">Culis lacinia</a></li>
@@ -153,13 +153,13 @@
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
+                    <li><a href="#">Acerca de</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Productos</a></li>
                     <li><a href="#">Location</a></li>
                   </ul>
                 </nav>
-                <h5>Follow us</h5>
+                <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
@@ -167,27 +167,23 @@
                 </ul>
               </div>
               <div class="grid_3">
-                <h5>Contact</h5>
+                <h5>Contacto</h5>
                 <dl>
-                  <dt>Telephone:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 959 603 6035</a></dd>
-                </dl>
-                <dl>
-                  <dt>FAX:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 504 889 9898</a></dd>
+                  <dt>Teléfono:</dt>
+                  <dd><a href="callto:#">&nbsp;(55) 5893-2231</a></dd>
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
-                <h5>Location</h5>
-                <address>8901 Marmora Road Glasgow, DO4 89GR</address>
+                <h5>Ubicación</h5>
+                <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
         <section class="copyright">
-          <div class="container">© <span id="copyright-year"></span>&nbsp;QUARRY.&nbsp;<a href="index-5.html">Privacy policy</a>
+          <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
       </footer>
