--- a/index-2.html
+++ b/index-2.html
@@ -1,41 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:20 GMT -->
 <head>
-    <title>Services</title>
+    <title>Servicios</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-    <script src="js/jquery-migrate-1.2.1.js"></script><!--[if lt IE 9]>
-    <html class="lt-ie9">
-      <div style="clear: both; text-align:center; position: relative;"><a href="http://windows.microsoft.com/en-US/internet-explorer/.."><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-    </html>
-    <script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/device.min.js"></script>
   </head>
   <body>
     <div class="page">
-      <!--
-      ========================================================
-      							HEADER
-      ========================================================
-
-
-      -->
       <header>
         <div id="stuck_container" class="stuck_container">
           <div class="container">
-            <h1 class="brand fl-glypho-camera119"><a href="index.html">Quarry</a></h1>
+            <a href="index.html"><img src="images/logo.png" alt=""/></a>
             <nav class="nav">
               <ul data-type="navbar" class="sf-menu">
                 <li><a href="index.html">Inicio</a>
                 </li>
-                <li><a href="index-1.html">About</a>
-                  <ul>
+                <li><a href="index-1.html">Acerca de</a>
+                  <!-- <ul>
                     <li><a href="#">Lorem ipsum dolor</a></li>
                     <li><a href="#">Conse ctetur adipisicing</a></li>
                     <li><a href="#">Elit sed do eiusmod</a>
@@ -48,50 +35,45 @@
                     <li><a href="#">Incididunt ut labore</a></li>
                     <li><a href="#">Et dolore magna</a></li>
                     <li><a href="#">Ut enim ad minim</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li class="active"><a href="index-2.html">Services</a>
+                <li class="active"><a href="index-2.html">Servicios</a>
                 </li>
-                <li><a href="index-3.html">Products</a>
+                <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Location</a>
+                <li><a href="index-4.html">Ubicación</a>
                 </li>
               </ul>
             </nav>
           </div>
         </div>
       </header>
-      <!--
-      ========================================================
-      							CONTENT
-      ========================================================
-      -->
       <main>
         <section class="well center bg-color">
           <div class="container">
-            <h2>Services overview</h2>
+            <h2>Servicios</h2>
             <div class="row">
               <figure class="grid_3 figure2"><img src="images/page-3_img01.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Donec sit amet eros</h5>
+                  <h5 data-equal-group="1">Donec sit amet eros</h5><br>
                   <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
                 </figcaption>
               </figure>
               <figure class="grid_3 figure2"><img src="images/page-3_img02.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Duis ultricies</h5>
+                  <h5 data-equal-group="1">Duis ultricies</h5><br>
                   <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
                 </figcaption>
               </figure>
               <figure class="grid_3 figure2"><img src="images/page-3_img03.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Lorem ipsum dol</h5>
+                  <h5 data-equal-group="1">Lorem ipsum dol</h5><br>
                   <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
                 </figcaption>
               </figure>
               <figure class="grid_3 figure2"><img src="images/page-3_img04.jpg" alt="">
                 <figcaption>
-                  <h5 data-equal-group="1">Aenean nonum</h5>
+                  <h5 data-equal-group="1">Aenean nonum</h5><br>
                   <p class="txt1">Fusce feugiat malesuada odio. Morbi nunc odio, gravida at cursus lorem. Maecenas tristique.</p><a href="#" class="btn">Read more</a>
                 </figcaption>
               </figure>
@@ -100,7 +82,7 @@
         </section>
         <section data-mobile="true" class="well parallax" style='background-image: url("images/parallax3.jpg");'>
           <div class="container">
-            <h2 class="center">Featured Services</h2>
+            <h2 class="center">Featured Servicios</h2>
             <div class="row off2">
               <div class="grid_4">
                 <h6>Cum sociis natoque penatibus et magnis dis parturient </h6>
@@ -119,7 +101,7 @@
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Premium quarry services</h2>
+            <h2>Premium quarry Servicios</h2>
             <h5 class="off2">Donec sit amet eros. Lorem ipsum dolor amet, consectetuer adipiscing elit.</h5>
             <p class="txt1">Mauris fermentum dictum magna. Sed laoreet aliquam leo. Ut tellus dolor, dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante eu lacus. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem.</p><a href="#" class="btn">Get now</a>
           </div>
@@ -145,7 +127,7 @@
         </section>
         <section class="well center">
           <div class="container">
-            <h2>Additional services</h2>
+            <h2>Additional Servicios</h2>
             <ul class="row product-list">
               <li class="grid_2">
                 <div class="icon fl-glypho-document6"></div>
@@ -191,7 +173,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Products</h5>
+                <h5>Productos</h5>
                 <ul>
                   <li><a href="#">Vestibulum</a></li>
                   <li><a href="#">Culis lacinia</a></li>
@@ -227,13 +209,13 @@
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Acerca de</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Ubicación</a></li>
                   </ul>
                 </nav>
-                <h5>Follow us</h5>
+                <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
@@ -241,33 +223,26 @@
                 </ul>
               </div>
               <div class="grid_3">
-                <h5>Contact</h5>
+                <h5>Contacto</h5>
                 <dl>
-                  <dt>Telephone:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 959 603 6035</a></dd>
-                </dl>
-                <dl>
-                  <dt>FAX:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 504 889 9898</a></dd>
+                  <dt>Teléfono:</dt>
+                  <dd><a href="callto:#">&nbsp;(55) 5893-2231</a></dd>
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
-                <h5>Location</h5>
-                <address>8901 Marmora Road Glasgow, DO4 89GR</address>
+                <h5>Ubicación</h5>
+                <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
         <section class="copyright">
-          <div class="container">© <span id="copyright-year"></span>&nbsp;QUARRY.&nbsp;<a href="index-5.html">Privacy policy</a>
+          <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
       </footer>
     </div>
     <script src="js/script.js"></script>
-  </body><!-- Google Tag Manager --><noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-P9FT69"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P9FT69');</script><!-- End Google Tag Manager -->
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-2.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:34 GMT -->
-</html>
+  </body></html>
