--- a/index-5.html
+++ b/index-5.html
@@ -1,43 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-5.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:53 GMT -->
 <head>
-    <title>Privacy policy</title>
+    <title> | Aviso de privacidad</title>
     <meta charset="utf-8">
     <meta name="format-detection" content="telephone=no">
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/google-map.css">
-    <link rel="stylesheet" href="css/contact-form.css">
+    <link rel="stylesheet" href="css/Contacto-form.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js" charset="utf-8"></script>
-    <script src="js/jquery-migrate-1.2.1.js"></script><!--[if lt IE 9]>
-    <html class="lt-ie9">
-      <div style="clear: both; text-align:center; position: relative;"><a href="http://windows.microsoft.com/en-US/internet-explorer/.."><img src="images/ie8-panel/warning_bar_0000_us.jpg" border="0" height="42" width="820" alt="You are using an outdated browser. For a faster, safer browsing experience, upgrade for free today."></a></div>
-    </html>
-    <script src="js/html5shiv.js"></script><![endif]-->
+    <script src="js/jquery-migrate-1.2.1.js"></script>
     <script src="js/device.min.js"></script>
   </head>
   <body>
     <div class="page">
-      <!--
-      ========================================================
-      							HEADER
-      ========================================================
-
-
-      -->
       <header>
         <div id="stuck_container" class="stuck_container">
           <div class="container">
-            <h1 class="brand fl-glypho-camera119"><a href="index.html">Quarry</a></h1>
+            <a href="index.html"><img src="images/logo.png" alt="" /></a>
             <nav class="nav">
               <ul data-type="navbar" class="sf-menu">
                 <li><a href="index.html">Inicio</a>
                 </li>
-                <li><a href="index-1.html">About</a>
-                  <ul>
+                <li><a href="index-1.html">Acerca de</a>
+                  <!-- <ul>
                     <li><a href="#">Lorem ipsum dolor</a></li>
                     <li><a href="#">Conse ctetur adipisicing</a></li>
                     <li><a href="#">Elit sed do eiusmod</a>
@@ -50,13 +37,13 @@
                     <li><a href="#">Incididunt ut labore</a></li>
                     <li><a href="#">Et dolore magna</a></li>
                     <li><a href="#">Ut enim ad minim</a></li>
-                  </ul>
+                  </ul> -->
                 </li>
-                <li><a href="index-2.html">Services</a>
+                <li><a href="index-2.html">Servicios</a>
                 </li>
-                <li><a href="index-3.html">Products</a>
+                <li><a href="index-3.html">Productos</a>
                 </li>
-                <li><a href="index-4.html">Location</a>
+                <li><a href="index-4.html">Ubicación</a>
                 </li>
               </ul>
             </nav>
@@ -71,7 +58,7 @@
       <main>
         <section class="well">
           <div class="container">
-            <h2 class="center">Privacy policy</h2>
+            <h2 class="center"> | Aviso de privacidad</h2>
             <dl>
               <dt>Mes cuml dia sed in lacus ut eniascet etor ingerto aliiqt es sitet amet dolo.</dt>
               <dd>Eismod ictorut ligulate ameti dapi licdunt mtsent lusto dolor ltisim comme. Mes cuml dia sed inertio lacus ut eniascet ingerto aliiqt sit eism odictor. Ut ligulate ameti dapibus ticdu nt mtsent dolorltiissim. Mes cuml dia mtsent dolor los ltiissim  commete pulvinar ac aliiqt es sitet amet dolo eismod ictorut ligulate ameti dapi licdu nt mtsent lusto dolor ltisim comme. Mes cuml dia sed inertio lacus ut eniascet ingerto aliiqt sit eism odictor. Ut ligulate ameti dapibus ticdu nt. Commete mtsent aliiqt. Es sitet amet eismod ictor ut ligulate ameti dapibusti mtsent lusto dolor ltisim comme. Mes cuml dia sed inertio lacus ut eniascet ingerto aliiqt sit amet eism odictor. Ut ligulate ameti dapibus ticdu nt mtsent. </dd>
@@ -99,7 +86,7 @@
           <div class="container">
             <div class="row">
               <div class="grid_3">
-                <h5>Products</h5>
+                <h5>Productos</h5>
                 <ul>
                   <li><a href="#">Vestibulum</a></li>
                   <li><a href="#">Culis lacinia</a></li>
@@ -135,13 +122,13 @@
                 <nav>
                   <ul>
                     <li><a href="#">Inicio</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Products</a></li>
-                    <li><a href="#">Location</a></li>
+                    <li><a href="#">Acerca de</a></li>
+                    <li><a href="#">Servicios</a></li>
+                    <li><a href="#">Productos</a></li>
+                    <li><a href="#">Ubicación</a></li>
                   </ul>
                 </nav>
-                <h5>Follow us</h5>
+                <h5>Síguenos</h5>
                 <ul>
                   <li><a href="#" class="fa-google-plus"><span>Google+</span></a></li>
                   <li><a href="#" class="fa-twitter"><span>Twitter</span></a></li>
@@ -149,33 +136,27 @@
                 </ul>
               </div>
               <div class="grid_3">
-                <h5>Contact</h5>
+                <h5>Contacto</h5>
                 <dl>
-                  <dt>Telephone:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 959 603 6035</a></dd>
-                </dl>
-                <dl>
-                  <dt>FAX:</dt>
-                  <dd><a href="callto:#">&nbsp;+1 504 889 9898</a></dd>
+                  <dt>Teléfono:</dt>
+                  <dd><a href="callto:#">&nbsp;(55) 5893-2231</a></dd>
                 </dl>
                 <dl>
                   <dt>E-mail:</dt>
                   <dd><a href="mailto:#">&nbsp;mail@demolink.org</a></dd>
                 </dl>
-                <h5>Location</h5>
-                <address>8901 Marmora Road Glasgow, DO4 89GR</address>
+                <h5>Ubicación</h5>
+                <address>Vía López Portillo 76, Col. Recursos Hidraulicos, Tultitlán, MEX 54913</address>
               </div>
             </div>
           </div>
         </section>
         <section class="copyright">
-          <div class="container">© <span id="copyright-year"></span>&nbsp;QUARRY.&nbsp;<a href="index-5.html">Privacy policy</a>
+          <div class="container">© <span id="copyright-year"></span>&nbsp;Grúas J. McPris&nbsp;<a href="index-5.html"> | Aviso de privacidad</a>
           </div>
         </section>
       </footer>
     </div>
-    <script src="js/script.js"></script><!-- coded by Kirk -->
-  </body><!-- Google Tag Manager --><noscript><iframe src="http://www.googletagmanager.com/ns.html?id=GTM-P9FT69"height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript><script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start': new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P9FT69');</script><!-- End Google Tag Manager -->
-
-<!-- Mirrored from livedemo00.template-help.com/wt_55103/index-5.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 14 Nov 2016 03:01:54 GMT -->
-</html>
+    <script src="js/script.js"></script>
+  </body>
+  </html>
